--- a/Library-Management.Infrastructure/Library-Management.Infrastructure.csproj
+++ b/Library-Management.Infrastructure/Library-Management.Infrastructure.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Librairi-Management.Domain\Library-Management.Domain.csproj" />
   </ItemGroup>
 
