--- a/Library Management/appsettings.json
+++ b/Library Management/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=DBBiblioth;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=DBBibliotheque;Trusted_Connection=True;"
   }
 }
