--- a/Library-Management.Application/Library-Management.Application.csproj
+++ b/Library-Management.Application/Library-Management.Application.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Librairi-Management.Domain\Library-Management.Domain.csproj" />
   </ItemGroup>
 
